--- a/src/components/Contact_Us/Contact_Us.css
+++ b/src/components/Contact_Us/Contact_Us.css
@@ -8,7 +8,7 @@
 @media (max-width: 1199px) {
   .contact {
     margin-top: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 }
 
@@ -96,7 +96,7 @@
 .light_mode .contact_right_info .contact_form .contact_err_msg {
   background: #d5dde0;
 }
-@media (max-width: 480px) {
+@media (min-width: 480px) and (max-width: 767px) {
   .contact_right_info .contact_form .contact_err_msg {
     font-size: 12px;
     padding-top: 8px;
@@ -119,7 +119,7 @@
 .light_mode .contact_right_info .contact_form .contact_success_msg {
   background: #d5dde0;
 }
-@media (max-width: 480px) {
+@media (min-width: 480px) and (max-width: 767px) {
   .contact_right_info .contact_form .contact_success_msg {
     font-size: 12px;
     padding-top: 8px;
@@ -130,6 +130,11 @@
   width: 100%;
   display: flex;
   gap: 10px;
+}
+.contact_form .contact_sub_msg {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 .contact_form .contact_field {
   width: 100%;
@@ -180,7 +185,7 @@
   cursor: pointer;
   background-image: linear-gradient(10deg, #19499c 0%, #2980b9 100%);
 }
-@media (max-width: 480px) {
+@media (min-width: 480px) and (max-width: 767px) {
   .contact_form .contact_submit .contact_submit_button {
     margin: 5px auto;
   }
