--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,13 +1,23 @@
 .calendar {
   width: 100%;
-  height: calc(88vh + 4px);
+  height: calc(100% - 25px);
   background-color: #525252;
   padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 480px) and (orientation: portrait) {
+  .calendar {
+    height: calc(100% - 30px);
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .calendar {
     height: 580px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
+  .calendar {
+    height: calc(100% - 30px);
   }
 }
 .light_mode .calendar {
@@ -82,7 +92,7 @@
 }
 .calendar .calendar_section {
   width: calc(100% - 12px);
-  height: calc(100% - 49px);
+  height: calc(100% - 48px);
   background-color: #292929;
   margin-left: 6px;
   margin-right: 6px;
