--- a/src/components/ChartsView/ChartsView.css
+++ b/src/components/ChartsView/ChartsView.css
@@ -1,15 +1,15 @@
 .charts {
   width: 100%;
+  height: calc(100% - 35px);
 }
 .charts .charts_view {
-  max-height: 65vh;
-  height: 580px;
   width: 100%;
+  height: 70%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
   grid-gap: 5px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .charts .charts_view {
     max-height: 420px;
   }
