--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -5,7 +5,7 @@
   grid-template-columns: 1fr auto;
   margin-left: 5px;
 }
-@media (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .content {
     display: flex;
     flex-direction: column;
@@ -18,18 +18,18 @@
   display: flex;
   flex-direction: column;
 }
-@media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .content .content_middle {
     order: 2;
     display: none;
   }
 }
-@media (min-width: 481px) and (max-width: 766px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .content .content_middle {
     display: block;
   }
 }
-@media (min-width: 767px) and (max-width: 1023px) {
+@media (min-width: 767px) and (max-width: 991px) and (orientation: portrait) {
   .content .content_middle {
     order: 2;
     display: none;
@@ -41,9 +41,4 @@
   display: flex;
   flex-direction: column;
   align-items: end;
-}
-@media (max-width: 480px) {
-  .content .content_Rsides {
-    order: 1;
-  }
 }
