--- a/src/components/MovingAverage/MovingAverage.css
+++ b/src/components/MovingAverage/MovingAverage.css
@@ -1,13 +1,23 @@
 .moving {
   width: 100%;
-  height: calc(88vh + 4px);
+  height: calc(100% - 25px);
   background-color: #525252;
   padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 480px) and (orientation: portrait) {
+  .moving {
+    height: calc(100% - 30px);
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .moving {
     height: 580px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
+  .moving {
+    height: calc(100% - 30px);
   }
 }
 .light_mode .moving {
@@ -62,7 +72,7 @@
 
 .moving .moving_section {
   width: calc(100% - 12px);
-  height: calc(100% - 27px);
+  height: calc(100% - 26px);
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
@@ -123,14 +133,19 @@
   align-items: center;
   margin-top: 55px;
 }
-@media (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .moving_section .tech_chart {
     margin-top: 40px;
   }
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .moving_section .tech_chart {
-    margin-top: 25px;
+    margin-top: 20px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
+  .moving_section .tech_chart {
+    margin-top: 20px;
   }
 }
 .moving_section .tech_chart .chart_info {
