--- a/src/components/PatternsSignals/PatternsSignals.css
+++ b/src/components/PatternsSignals/PatternsSignals.css
@@ -1,13 +1,11 @@
 .patternsSignals_general {
   position: relative;
-}
-.patterns_signals {
   width: 100%;
-  height: 100%;
+  height: calc(30% - 5px);
   margin-right: 5px;
   border-radius: 4px 0px 4px 4px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .patterns_signals {
     height: 200px;
   }
@@ -126,14 +124,19 @@
 }
 .patterns_signals .patterns_signals_content {
   width: 100%;
-  height: 23vh;
+  height: 23.5vh;
   background-color: #525252;
   padding-top: 5px;
   border-radius: 0px 0px 4px 4px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .patterns_signals .patterns_signals_content {
     height: 150px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
+  .patterns_signals .patterns_signals_content {
+    height: 145px;
   }
 }
 .light_mode .patterns_signals .patterns_signals_content {
