--- a/src/components/PivotPoints/PivotPoints.css
+++ b/src/components/PivotPoints/PivotPoints.css
@@ -1,13 +1,23 @@
 .pivot_points {
   width: 100%;
-  height: calc(88vh + 4px);
+  height: calc(100% - 25px);
   background-color: #525252;
   padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 480px) and (orientation: portrait) {
+  .pivot_points {
+    height: calc(100% - 30px);
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .pivot_points {
     height: 580px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
+  .pivot_points {
+    height: calc(100% - 30px);
   }
 }
 .light_mode .pivot_points {
@@ -62,7 +72,7 @@
 
 .pivot_points .pivot_section {
   width: calc(100% - 12px);
-  height: calc(100% - 27px);
+  height: calc(100% - 26px);
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
