--- a/src/components/RSide_Symbol/RSide_Symbol.css
+++ b/src/components/RSide_Symbol/RSide_Symbol.css
@@ -1,26 +1,31 @@
 .rSide_symbol {
   width: 100%;
-  height: calc(88vh + 4px);
+  height: calc(100% - 25px);
   background-color: #525252;
   padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (max-width: 480px) and (orientation: portrait) {
+  .rSide_symbol {
+    height: calc(100% - 30px);
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .rSide_symbol {
     height: 580px;
+  }
+}
+@media (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
+  .rSide_symbol {
+    height: calc(100% - 30px);
   }
 }
 .light_mode .rSide_symbol {
   background-color: #d5dde0;
 }
 .rSide_symbol .rSide_content {
-  height: calc(88vh - 3px);
+  height: calc(100% + 9px);
   padding-top: 10px;
-}
-@media (min-width: 481px) and (max-width: 767px) {
-  .rSide_symbol .rSide_content {
-    height: calc(100% + 10px);
-  }
 }
 .rSide_symbol .rSide_section {
   width: calc(100% - 12px);
@@ -61,7 +66,7 @@
   font-weight: bold;
   font-size: 14px;
 }
-@media (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .rSide_section .symbol_data .symbol_data_head {
     font-size: 13px;
   }
@@ -92,7 +97,7 @@
   font-size: 14px;
   color: #a5a5a5;
 }
-@media (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .rSide_section .symbol_data_div .data_name {
     font-size: 13px;
   }
@@ -103,7 +108,7 @@
 .rSide_section .symbol_data_div .data_value {
   font-size: 13px;
 }
-@media (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .rSide_section .symbol_data_div .data_value {
     font-size: 12px;
   }
