--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -8,25 +8,25 @@
   justify-content: space-between;
   transition: var(--main_transition);
 }
-@media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .sidebar {
-    min-width: 325px;
+    min-width: calc(100% - 50px);
   }
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .sidebar {
     min-width: 325px;
     height: 670px;
   }
 }
-@media (min-width: 767px) and (max-width: 1023px) {
+@media (min-width: 767px) and (max-width: 991px) and (orientation: portrait) {
   .sidebar {
-    min-width: 370px;
+    min-width: calc(100% - 395px);
   }
 }
-@media (min-width: 1024px) and (max-width: 1199px) {
+@media (min-width: 768px) and (max-width: 1199px) and (orientation: landscape) {
   .sidebar {
-    min-width: 280px;
+    min-width: 300px;
   }
 }
 
@@ -40,7 +40,7 @@
   flex-direction: column;
   transition: var(--main_transition);
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .sm_sidebar {
     height: 670px;
   }
@@ -124,7 +124,7 @@
   transition: var(--main_transition);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-@media (max-width: 480px) {
+@media (max-width: 480px) and (orientation: portrait) {
   .lang_dropdown .dropdown_menu {
     width: 70px;
     padding-bottom: 5px;
