--- a/src/components/Watchlists/Watchlists.css
+++ b/src/components/Watchlists/Watchlists.css
@@ -10,7 +10,7 @@
   margin-top: 6px;
   overflow: auto;
 }
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .watchlist .watchlist_section {
     max-height: 320px;
   }
