Fix Contact, Mailing and Plans page in responsive

--- a/src/components/ChartsView/ChartsView.css
+++ b/src/components/ChartsView/ChartsView.css
@@ -5,6 +5,7 @@
 .charts .charts_view {
   width: 100%;
   height: 70%;
+  height: 65vh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
   grid-gap: 5px;
