--- a/src/components/SubscriptionPlans/SubscriptionPlans.css
+++ b/src/components/SubscriptionPlans/SubscriptionPlans.css
@@ -120,12 +120,7 @@
   gap: 6px;
   overflow: auto;
 }
-@media (max-width: 480px) and (orientation: portrait) {
-  .subPlans .plan_section {
-    height: auto;
-  }
-}
-@media (min-width: 767px) and (max-width: 1024px) and (orientation: portrait) {
+@media (orientation: portrait) {
   .subPlans .plan_section {
     height: auto;
   }
