--- a/src/components/ChartsView/ChartsView.css
+++ b/src/components/ChartsView/ChartsView.css
@@ -1,10 +1,9 @@
 .charts {
   width: 100%;
-  height: calc(100% - 35px);
+  height: 100vh;
 }
 .charts .charts_view {
   width: 100%;
-  height: 70%;
   height: 65vh;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
@@ -12,7 +11,7 @@
 }
 @media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .charts .charts_view {
-    max-height: 420px;
+    height: 420px;
   }
 }
 .chart.full-width {
