--- a/src/components/PatternsSignals/PatternsSignals.css
+++ b/src/components/PatternsSignals/PatternsSignals.css
@@ -1,7 +1,7 @@
 .patternsSignals_general {
   position: relative;
   width: 100%;
-  height: calc(30% - 5px);
+  height: 25%;
   margin-right: 5px;
   border-radius: 4px 0px 4px 4px;
 }
@@ -124,7 +124,7 @@
 }
 .patterns_signals .patterns_signals_content {
   width: 100%;
-  height: 23.5vh;
+  height: 22vh;
   background-color: #525252;
   padding-top: 5px;
   border-radius: 0px 0px 4px 4px;
