--- a/src/components/AllSymbols/AllSymbols.css
+++ b/src/components/AllSymbols/AllSymbols.css
@@ -126,7 +126,7 @@
   }
 }
 .symbol .symbol_section {
-  max-height: calc(100% - 45px);
+  height: calc(100vh - 340px);
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -136,7 +136,7 @@
 }
 @media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
   .symbol .symbol_section {
-    max-height: 320px;
+    height: calc(100vh - 60px);
   }
 }
 .popular .popular_section {
