--- a/src/components/SubscriptionPlans/SubscriptionPlans.css
+++ b/src/components/SubscriptionPlans/SubscriptionPlans.css
@@ -120,7 +120,7 @@
   gap: 6px;
   overflow: auto;
 }
-@media (orientation: portrait) {
+@media (orientation: portrait) and (orientation: landscape) {
   .subPlans .plan_section {
     height: auto;
   }
