--- a/src/components/InfoButton/InfoButton.css
+++ b/src/components/InfoButton/InfoButton.css
@@ -1,13 +1,18 @@
 .info_btn {
-  height: auto;
-  color: #2dcc72;
+  color: #cfcfcf;
   background: transparent;
-  padding: 4px 3px 2px;
+  padding: 2px 2px 0;
   outline: none;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
+.light_mode .info_btn {
+  color: #2d2d2d;
+}
 .info_btn:hover {
   background-color: #525252;
+}
+.light_mode .info_btn:hover {
+  background-color: #c7c7c7;
 }
