--- a/src/components/InfoModal/InfoModal.css
+++ b/src/components/InfoModal/InfoModal.css
@@ -10,3 +10,15 @@
   margin-top: 30px;
   margin-bottom: 30px;
 }
+.images_section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.images_section img {
+  width: 100px;
+  height: 150px;
+}
