--- a/src/components/RightSide/RightSide.css
+++ b/src/components/RightSide/RightSide.css
@@ -61,6 +61,9 @@
   gap: 5px;
 }
 .right_side .tabs .tab {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 11px;
   font-weight: 500;
   color: #bababa;
@@ -71,6 +74,9 @@
 }
 .sm_right_side .tabs .tab {
   color: #bababa;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 10px;
   cursor: pointer;
 }
