--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -80,6 +80,7 @@
 .top_menu .top_menu_icons {
   color: #cfcfcf;
   display: flex;
+  align-items: center;
   gap: 8px;
 }
 .light_mode .top_menu .top_menu_icons {
@@ -90,7 +91,7 @@
 }
 .top_menu_icons i {
   font-size: 15px;
-  padding: 2px 2px 0 2px;
+  padding: 2px 2px 0;
   transition: var(--main_transition);
   cursor: pointer;
 }
